Let's go all builder pattern on this thing